<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/rbMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

        <RadioButton
            android:id="@+id/rbNightmare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nightmare" />

        <RadioButton
            android:id="@+id/rbHell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hell" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>